--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 <section class="feauter">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6">
-                <h1>What's new?</h1>
+            <div class="col-lg-6 fea-h1">
+                <h1 class="">What's new?</h1>
             </div>
-            <div class="col-lg-6">
-                <p>Accurate employee time tracking software for reporting, invoicing and painless payroll. Trusted by over 2,000 businesses in more than 70 countries. </p>
+            <div class="col-lg-6 fea-p">
+                <p class="">Accurate employee time tracking software for reporting, invoicing and painless payroll. Trusted by over 2,000 businesses in more than 70 countries. </p>
             </div>
         </div>
         <div class="row">
@@ -237,6 +237,70 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Newsletter section -->
+<section class="newsletter text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h5>Keep up to date with the latest updates</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Subscribe to our newsletter</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <input type="email" name="" id="" placeholder="Email" class="form-control type-email">
+            </div>
+            <div class="col-lg-4">
+                <a class="button-1" href="#">Subscribe</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Contact Section -->
+<section class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1>Contact Us</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54054.14472842225!2d89.22702591602857!3d25.7498342622402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e32de6fca6019b%3A0x9fa496e687f818c8!2sRangpur!5e1!3m2!1sen!2sbd!4v1642974300631!5m2!1sen!2sbd" width="550" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="col-lg-6">
+                <form action="#">
+                    <label for="name" class="my-2"><b>Name:</b></label>
+                    <input type="text" name="" id="" placeholder="Type Your Name" class="form-control">
+                    <label for="email" class="my-2"><b>Email:</b></label> 
+                    <input type="email" name="#" id="" placeholder="Type Your Email" class="form-control">
+                    <label for="num" class="my-2"><b>Number:</b></label>
+                    <input type="tel" name="" id="" placeholder="Type Your Number" class="form-control">
+                    <label for="sub" class="my-2"><b>Subject:</b></label>
+                    <input type="text" name="" id="" placeholder="Subject" class="form-control">
+                    <label for="text" class="my-2"><b>Message:</b></label>
+                    <textarea name="" id="" cols="50" rows="10" class="form-control my-2"></textarea>
+                    <button type="submit" class="btn btn-outline-primary btn-2">Submit</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Section Footer -->
+<section class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy All Right Reserved by Developer Mokhlesur </p>
             </div>
         </div>
     </div>
