--- a/index.html
+++ b/index.html
@@ -277,17 +277,18 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54054.14472842225!2d89.22702591602857!3d25.7498342622402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e32de6fca6019b%3A0x9fa496e687f818c8!2sRangpur!5e1!3m2!1sen!2sbd!4v1642974300631!5m2!1sen!2sbd" width="550" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="col-lg-6">
-                <form action="#">
+                <form action="https://formspree.io/f/xoqreler"
+                method="POST">
                     <label for="name" class="my-2"><b>Name:</b></label>
-                    <input type="text" name="" id="" placeholder="Type Your Name" class="form-control">
+                    <input type="text" name="Name" id="" placeholder="Type Your Name" class="form-control">
                     <label for="email" class="my-2"><b>Email:</b></label> 
-                    <input type="email" name="#" id="" placeholder="Type Your Email" class="form-control">
+                    <input type="email" name="E-mail" id="" placeholder="Type Your Email" class="form-control">
                     <label for="num" class="my-2"><b>Number:</b></label>
-                    <input type="tel" name="" id="" placeholder="Type Your Number" class="form-control">
+                    <input type="tel" name="Number" id="" placeholder="Type Your Number" class="form-control">
                     <label for="sub" class="my-2"><b>Subject:</b></label>
-                    <input type="text" name="" id="" placeholder="Subject" class="form-control">
+                    <input type="text" name="Subject" id="" placeholder="Subject" class="form-control">
                     <label for="text" class="my-2"><b>Message:</b></label>
-                    <textarea name="" id="" cols="50" rows="10" class="form-control my-2"></textarea>
+                    <textarea name="Message" id="" cols="50" rows="10" class="form-control my-2"></textarea>
                     <button type="submit" class="btn btn-outline-primary btn-2">Submit</button>
 
                 </form>
